style.css
/* ... */
  button,
  input,
  select,
  textarea {
    font-family: inherit;
    font-size: 100%;
    line-height: 1.15;
    margin: 0;
  }

  button,
  input {
    overflow: visible;
  }

  button,
  select {
    text-transform: var(--brand-casing);
  }

  button,
  [type="button"],
  [type="reset"],
  [type="submit"] {
    -webkit-appearance: button;
  }

  button::-moz-focus-inner,
  [type="button"]::-moz-focus-inner,
  [type="reset"]::-moz-focus-inner,
  [type="submit"]::-moz-focus-inner {
    border-style: none;
    padding: 0;
  }

  button:-moz-focusring,
  [type="button"]:-moz-focusring,
  [type="reset"]:-moz-focusring,
  [type="submit"]:-moz-focusring {
    outline: 1px dotted ButtonText;
  }

  /* Reset headings */
  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    font-size: inherit;
    font-weight: inherit;
    margin: 0;
  }

  a {
    color: var(--accent);
    text-decoration: none;
    padding: 2px 4px;
    border-radius: var(--border-radius-small);
  }

  a:hover {
    background-color: var(--accent-100);
  }

  .container {
    max-width: var(--container-width);
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: var(--container-gap);
    padding: var(--container-padding);
  }

  #header {
    display: flex;
    justify-content: space-between;
    align-items: top;
  }

  .headline {
    font-size: 1rem;
  }

  .headline span {
    display: block;
    color: var(--primary-dark-100);
  }

  .filter-container {
    padding: 0;
    text-align: left;
    margin-bottom: 0;
  }

  .filter-btn {
    padding: 4px 14px 10px 20px;
    margin: 0 6px;
    border: none;
    border-radius: var(--border-radius-round);
    background-color: var(--primary-light-300);
    cursor: pointer;
    margin-bottom: 8px;
    font-size: var(--font-20);
    font-weight: var(--font-20-weight);
    line-height: var(--font-20-line-height);
    letter-spacing: var(--font-20-letter-spacing);
    color: var(--primary-dark-200);
    text-transform: var(--brand-casing);
    position: relative;
  }

  .filter-btn sup {
    font-size: 0.6em;
    margin-left: 4px;
    color: var(--primary-dark-300);
    font-weight: normal;
    vertical-align: super;
  }

  .filter-btn.active {
    background-color: var(--accent);
    color: var(--primary-light);
  }

  .filter-btn.active sup {
    background-color: var(--accent);
    color: var(--primary-light);
  }

  .filter-btn:first-child {
    margin-right: 32px;
    margin-left: 0;
  }

  .filter-helper {
    font-size: var(--font-12);
    font-weight: var(--font-12-weight);
    line-height: var(--font-12-line-height);
    letter-spacing: var(--font-12-letter-spacing);
    color: var(--primary-dark-200);
    margin-top: -28px;
    margin-left: 100px;
  }

  .filter-helper span {
    text-transform: uppercase;
    background-color: var(--primary-light-300);
    padding: 4px 8px;
    color: var(--primary-dark-200);
    border-radius: var(--border-radius-small);
    font-size: var(--font-8);
    font-weight: var(--font-8-weight);
    line-height: var(--font-8-line-height);
    letter-spacing: var(--font-8-letter-spacing);
  }

  .video-grid {
    display: grid;
    grid-template-columns: var(--video-grid);
    gap: 1px;
    background-color: var(--primary-light-400); /* Border color */
    padding: 1px; /* Outer border */
  }

  .video-wrapper {
    position: relative;
    display: flex;
    flex-direction: column;
    cursor: pointer;
    gap: 8px;
    padding: 20px 24px;
    background-color: var(--body-bgcolor);
  }

  .video-wrapper:after {
    content: '';
    position: absolute;
    top: -1px;
    left: -1px;
    right: -1px;
    bottom: -1px;
    background-color: var(--primary-light-400); /* Border color */
    z-index: -1;
  }

  /* Remove right border from last column */
  .video-wrapper:nth-child(3n)::after {
    border-right: none;
  }

  /* Remove bottom border from last row */
  .video-wrapper:nth-last-child(-n+3)::after {
    border-bottom: none;
  }

  .video-container {
    position: relative;
    width: 100%;
    padding-bottom: 56.25%;
    /* 16:9 Aspect Ratio */
    background-color: #000;
    border-radius: var(--border-radius-small);
    overflow: hidden;
  }

  .video-container iframe {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    border: none;
    pointer-events: none;
    /* Prevent interaction with grid videos */
  }

  .video-info {
    padding: 0;
  }

  .video-info-top {
    display: flex;
    justify-content: space-between;
    align-items: center;
    font-size: var(--font-14);
    font-weight: var(--font-14-weight);
    line-height: var(--font-14-line-height);
    letter-spacing: var(--font-14-letter-spacing);
  }

  .video-info-bottom {
    display: flex;
    justify-content: space-between;
  }

  .video-number {
    display: flex;
    color: var(--accent);
    white-space: nowrap;
  }

  .video-company {
    display: flex;
    color: var(--primary-dark-200);
    text-transform: var(--no-brand-casing);
  }

  .video-title-container {
    display: flex;
    max-width: 80%;
  }

  .video-title {
    font-size: var(--font-16);
    font-weight: var(--font-16-weight);
    line-height: var(--font-16-line-height);
    letter-spacing: var(--font-16-letter-spacing);
    text-transform: var(--no-brand-casing);
    color: var(--primary-light-fg);
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
  }

  .video-length-container {
    display: flex;
  }

  .video-id {
    display: block;
    color: #999;
    font-size: 0.8em;
    font-family: monospace;
  }

  .video-length {
    color: var(--primary-dark-200);
    font-size: var(--font-14);
    font-weight: var(--font-14-weight);
    line-height: var(--font-14-line-height);
    letter-spacing: var(--font-14-letter-spacing);
    margin-left: 0;
    padding: 4px 8px;
    background-color: var(--primary-light-300);
    border-radius: var(--border-radius-small);
  }
/* ... */

